# aldens_hvcc_helper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add_params_to_cpp.py  aldens_polysynth.pd  aldhis.pd  aldhis_config.json  config_template.json  eb_granular.pd  osc_test.pd  parse_params.py  replace_boilerplate.py  setup_env_with_hvcc.ps1  setup_env_with_hvcc.sh
.devcontainer/: Dockerfile  requirements.txt
CMake/: CMakeLists.txt
CMake/src/: PluginEditor.cpp  PluginProcessor.h
nodejs_testing/: osc2.pd
nodejs_testing/Heavy/js/: index.html
nodejs_testing/Heavy/react/: package-lock.json  package.json
nodejs_testing/Heavy/react/public/: index.html  mySynth.js  mySynth_AudioLibWorklet.js
nodejs_testing/Heavy/react/src/: PowerSwitch.js  VolumeSlider.js  index.js
plugin_template/: CMakeLists.txt
plugin_template/plugin/: CMakeLists.txt
plugin_template/plugin/include/Boiler_plate/: PluginProcessor.h
plugin_template/plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin_template_libpd/: CMakeLists.txt
plugin_template_libpd/plugin/: CMakeLists.txt
plugin_template_libpd/plugin/include/Boiler_plate/: PluginEditor.h  PluginProcessor.h  Utils.h
plugin_template_libpd/plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
tools/: generate.py
utils/: add_params_to_cpp.py  add_params_to_layout.py  add_params_to_update.py  exclude_hvcc_c_files.py  init_prepare_to_play.py  is_synth_note_on_off.py  move_headers.py  parse_params.py  replace_boilerplate.py
